--- a/index.html
+++ b/index.html
@@ -8,8 +8,58 @@
     <title>Geek List Project</title>
 </head>
 <body>
-    <header></header>
-    <main></main>
+    <header>
+        <img src="https://github.com/DeAndrago.png" alt="Imagem de Diego Andrade">
+    </header>
+    <main>
+        <section>
+            <h2>Meus Jogos:</h2>
+            <h3>Jogos que gosto muito</h3>
+            <ul>
+                <li>
+                    <a target="_blank" href="https://www.twitch.tv/directory/game/Dungeons%20%26%20Dragons"><img src="https://static-cdn.jtvnw.net/ttv-boxart/509577-144x192.jpg" alt="Imagem do Jogo D&D"></a></img>
+                </li>
+                <li>
+                    <a target="_blank" href="https://www.twitch.tv/directory/game/Ragnarok%20Online"><img src="https://static-cdn.jtvnw.net/ttv-boxart/15229_IGDB-144x192.jpg" alt="Imagem do Jogo Ragnarok Online"></a></img>
+                </li>
+                <li>
+                    <a target="_blank" href="https://www.twitch.tv/directory/game/Yakuza%200"><img src="https://static-cdn.jtvnw.net/ttv-boxart/476269_IGDB-144x192.jpg" alt="Imagem do Jogo Yakuza Zero"></a></img>
+                </li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>Canais e Streams:</h2>
+            <h3>Streams que assisto</h3>
+            <ul>    
+                <li>
+                    <a target="_blank" href="https://www.twitch.tv/luidematos"><img src="https://static-cdn.jtvnw.net/jtv_user_pictures/77bfcd2d-9e88-4955-bc81-1de9f415ee5d-profile_image-70x70.png" alt="Imagem do Streamer Luide"></a></img>
+                </li>
+                <li>
+                    <a target="_blank" href="https://www.twitch.tv/markleo09"><img src="https://static-cdn.jtvnw.net/jtv_user_pictures/markleo09-profile_image-6f16f5ce1d444047-70x70.png" alt="Imagem do Streamer Markleo 09"></a></img>
+                </li>
+                <li>
+                    <a target="_blank" href="https://www.twitch.tv/ignisolus"><img src="https://static-cdn.jtvnw.net/jtv_user_pictures/86f94267-354c-4e1d-a673-5a5079eefc33-profile_image-70x70.png" alt="Imagem do Streamer Ignis"></a></img>
+                </li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>Redes Sociais:</h2>
+            <h3>Minhas redes</h3>
+            <ul>
+                <li>
+                    <a>Instagram</a>
+                </li>
+                <li>
+                    <a>LinkeIN</a>
+                </li>
+                <li>
+                    <a>Github</a>
+                </li>
+            </ul>
+        </section>
+    </main>
     <footer></footer>    
 </body>
 </html>
