--- a/index.html
+++ b/index.html
@@ -15,57 +15,63 @@
     </header>
     <main>
         <section>
-            <h2>Meus Jogos:</h2>
-            <p>Jogos que gosto muito</p>
-            <ul class="games-list">
-                <li>
-                    <a target="_blank" href="https://www.twitch.tv/directory/game/Dungeons%20%26%20Dragons">
-                        <img src="https://static-cdn.jtvnw.net/ttv-boxart/509577-144x192.jpg" alt="Imagem do Jogo D&D"></a></img>
-                </li>
-                <li>
-                    <a target="_blank" href="https://www.twitch.tv/directory/game/Ragnarok%20Online">
-                        <img src="https://static-cdn.jtvnw.net/ttv-boxart/15229_IGDB-144x192.jpg" alt="Imagem do Jogo Ragnarok Online"></a></img>
-                </li>
-                <li>
-                    <a target="_blank" href="https://www.twitch.tv/directory/game/Yakuza%200">
-                        <img src="https://static-cdn.jtvnw.net/ttv-boxart/476269_IGDB-144x192.jpg" alt="Imagem do Jogo Yakuza Zero"></a></img>
-                </li>
-            </ul>
+            <div>
+                <h2>Meus Jogos:</h2>
+                <p>Jogos que gosto muito</p>
+                <ul class="games-list">
+                    <li>
+                        <a target="_blank" href="https://www.twitch.tv/directory/game/Dungeons%20%26%20Dragons">
+                            <img src="https://static-cdn.jtvnw.net/ttv-boxart/509577-144x192.jpg" alt="Imagem do Jogo D&D"></a></img>
+                    </li>
+                    <li>
+                        <a target="_blank" href="https://www.twitch.tv/directory/game/Ragnarok%20Online">
+                            <img src="https://static-cdn.jtvnw.net/ttv-boxart/15229_IGDB-144x192.jpg" alt="Imagem do Jogo Ragnarok Online"></a></img>
+                    </li>
+                    <li>
+                        <a target="_blank" href="https://www.twitch.tv/directory/game/Yakuza%200">
+                            <img src="https://static-cdn.jtvnw.net/ttv-boxart/476269_IGDB-144x192.jpg" alt="Imagem do Jogo Yakuza Zero"></a></img>
+                    </li>
+                </ul>
+            </div>
         </section>
 
         <section>
-            <h2>Canais e Streams:</h2>
-            <p>Streams que assisto</p>
-            <ul class="stream-list">    
-                <li>
-                    <a target="_blank" href="https://www.twitch.tv/luidematos">
-                        <img src="https://static-cdn.jtvnw.net/jtv_user_pictures/77bfcd2d-9e88-4955-bc81-1de9f415ee5d-profile_image-70x70.png" alt="Imagem do Streamer Luide"></a></img>
-                </li>
-                <li>
-                    <a target="_blank" href="https://www.twitch.tv/markleo09">
-                        <img src="https://static-cdn.jtvnw.net/jtv_user_pictures/markleo09-profile_image-6f16f5ce1d444047-70x70.png" alt="Imagem do Streamer Markleo 09"></a></img>
-                </li>
-                <li>
-                    <a target="_blank" href="https://www.twitch.tv/ignisolus">
-                        <img src="https://static-cdn.jtvnw.net/jtv_user_pictures/86f94267-354c-4e1d-a673-5a5079eefc33-profile_image-70x70.png" alt="Imagem do Streamer Ignis"></a></img>
-                </li>
-            </ul>
+            <div>
+                <h2>Canais e Streams:</h2>
+                <p>Streams que assisto</p>
+                <ul class="stream-list">    
+                    <li>
+                        <a target="_blank" href="https://www.twitch.tv/luidematos">
+                            <img src="https://static-cdn.jtvnw.net/jtv_user_pictures/77bfcd2d-9e88-4955-bc81-1de9f415ee5d-profile_image-70x70.png" alt="Imagem do Streamer Luide"></a></img>
+                    </li>
+                    <li>
+                        <a target="_blank" href="https://www.twitch.tv/markleo09">
+                            <img src="https://static-cdn.jtvnw.net/jtv_user_pictures/markleo09-profile_image-6f16f5ce1d444047-70x70.png" alt="Imagem do Streamer Markleo 09"></a></img>
+                    </li>
+                    <li>
+                        <a target="_blank" href="https://www.twitch.tv/ignisolus">
+                            <img src="https://static-cdn.jtvnw.net/jtv_user_pictures/86f94267-354c-4e1d-a673-5a5079eefc33-profile_image-70x70.png" alt="Imagem do Streamer Ignis"></a></img>
+                    </li>
+                </ul>
+            </div>
         </section>
 
         <section>
-            <h2>Redes Sociais:</h2>
-            <p>Minhas redes</p>
-            <ul class="social-list">
-                <li>
-                    <a>Instagram</a>
-                </li>
-                <li>
-                    <a>LinkeIN</a>
-                </li>
-                <li>
-                    <a>Github</a>
-                </li>
-            </ul>
+            <div>
+                <h2>Redes Sociais:</h2>
+                <p>Minhas redes</p>
+                <ul class="social-list">
+                    <li>
+                        <a>Instagram</a>
+                    </li>
+                    <li>
+                        <a>LinkeIN</a>
+                    </li>
+                    <li>
+                        <a>Github</a>
+                    </li>
+                </ul>
+            </div>
         </section>
     </main>
     <footer></footer>    
