Sixth Commit: Gradient Border + more topics

--- a/index.html
+++ b/index.html
@@ -25,8 +25,76 @@
     <main>
         <section>
             <div>
+                <h2>Filmes favoritos</h2>
+                <p>Películas que moldaram o meu ser! (poético, não?)</p>
+
+                <ul class="movie-list">
+                    <li>
+                        <a target="_blank" href="https://www.imdb.com/title/tt0780504/?ref_=nv_sr_srsg_1">
+                            <img src="https://br.web.img2.acsta.net/c_310_420/medias/nmedia/18/87/36/97/20028835.jpg"alt="Imagem do filme Drive(2011)"></a>
+                    </li>
+
+                    <li>
+                        <a target="_blank" href="https://www.imdb.com/title/tt0083658/?ref_=nv_sr_srsg_0">
+                            <img src="https://br.web.img3.acsta.net/c_310_420/medias/nmedia/18/91/15/13/20132048.jpg" alt="Imagem do filme Blade Runner"></a>
+                    </li>
+
+                    <li>
+                        <a target="_blank" href="https://www.imdb.com/title/tt0167260/?ref_=nv_sr_srsg_6">
+                            <img src="https://br.web.img3.acsta.net/c_310_420/medias/nmedia/18/92/91/47/20224867.jpg" alt="Imagem do Filme O Senhor dos Anéis - O Retorno do Rei"></a>
+                    </li>
+
+                    <li>
+                        <a target="_blank" href="https://pt.wikipedia.org/wiki/O_Auto_da_Compadecida_(filme)">
+                            <img src="https://www.cafecomfilme.com.br/media/k2/items/cache/20f470fff63d5a3af8846bd8cab92312_XL.jpg?t=20210204_201414" alt="Imagem do Filme O Auto da Compadecida"></a>
+                    </li>
+
+                    <li>
+                        <a target="_blank" href="https://www.imdb.com/title/tt0081505/?ref_=nv_sr_srsg_0">
+                            <img src="https://br.web.img3.acsta.net/c_310_420/pictures/14/10/10/19/21/152595.jpg" alt="Imagem do Filme O Iluminado"></a>
+                    </li>
+                </ul>
+            </div>
+        </section>
+
+        <section>
+            <div>
+                <h2>Quando fala de Música</h2>
+                <p>Aí você fala disso pra mim:</p>
+
+                <ul class="music-list">
+                    <li>
+                        <a target="_blank" href="https://pt.wikipedia.org/wiki/David_Bowie">
+                            <img src="https://i.scdn.co/image/ab6761610000e5ebb78f77c5583ae99472dd4a49"alt="Imagem do Cantor David Bowie"></a>
+                    </li>
+
+                    <li>
+                        <a target="_blank" href="https://pt.wikipedia.org/wiki/Beirut">
+                            <img src="https://i.scdn.co/image/ab67616d00001e0288f2b031d26e8eb57e49abe1" alt="Imagem da banda Beirut"></a>
+                    </li>
+
+                    <li>
+                        <a target="_blank" href="https://pt.wikipedia.org/wiki/Tim_Maia">
+                            <img src="https://akamai.sscdn.co/uploadfile/letras/fotos/5/d/1/3/5d138386cb0ff237d0f65cd6a9905ab4.jpg" alt="Imagem do Cantor Tim Maia"></a>
+                    </li>
+
+                    <li>
+                        <a target="_blank" href="https://pt.wikipedia.org/wiki/Sabotage_(cantor)">
+                            <img src="https://gladsontarga.files.wordpress.com/2021/01/sabotage-1.png?w=640" alt="Imagem do Rapper Sabotage"></a>
+                    </li>
+
+                    <li>
+                        <a target="_blank" href="https://pt.wikipedia.org/wiki/Michael_Jackson">
+                            <img src="https://edm.com/.image/ar_1:1%2Cc_fill%2Ccs_srgb%2Cfl_progressive%2Cq_auto:good%2Cw_1200/MTU3OTQ3NTQ5MDExOTQ1NDIy/b1ba73cb-d420-4123-86a3-f5f63a4fae97.jpg" alt="Imagem do Cantor Michael Jackson"></a>
+                    </li>
+                </ul>
+            </div>
+        </section>
+
+        <section>
+            <div>
                 <h2>Meus Jogos:</h2>
-                <p>Jogos que gosto muito</p>
+                <p>Games que me marcaram, e são meus favoritos!</p>
                 <ul class="games-list">
                     <li>
                         <a target="_blank" href="https://www.twitch.tv/directory/game/Dungeons%20%26%20Dragons">
@@ -59,7 +127,7 @@
         <section>
             <div>
                 <h2>Canais e Streams:</h2>
-                <p>Streams que assisto</p>
+                <p>Transmissões que não deixo de acompanhar</p>
                 <ul class="stream-list">    
                     <li>
                         <a target="_blank" href="https://www.twitch.tv/luidematos">
@@ -96,8 +164,8 @@
 
         <section>
             <div>
-                <h2>Redes Sociais:</h2>
-                <p>Minhas redes</p>
+                <h2>Minhas Redes</h2>
+                <p>Por onde você pode me achar!</p>
                 <ul class="social-list">
                     <li>
                         <a target="_blank" href="https://www.twitch.tv/deandrago" alt="Canal da Twitch"></a>
@@ -139,6 +207,7 @@
             </div>
         </section>
     </main>
-    <footer></footer>    
+    <footer>
+    </footer>    
 </body>
 </html>
