--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     <link rel="stylesheet" href="./style.css">
     <title>Geek List Project</title>
 </head>
+
 <body>
+
     <header>
         <div>
             <img src="https://github.com/DeAndrago.png" alt="Imagem de Diego Andrade">
@@ -168,7 +170,7 @@
                 <p>Por onde você pode me achar!</p>
                 <ul class="social-list">
                     <li>
-                        <a target="_blank" href="https://www.twitch.tv/deandrago" alt="Canal da Twitch"></a>
+                        <a target="_blank" href="https://www.twitch.tv/deandrago">
                             <svg width="33" height="32" viewBox="0 0 33 32" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M21.2824 25H15.8426C15.6011 25.0001 15.3678 25.0844 15.1852 25.2375L9.28125 30V25H6.1875C5.914 25 5.65169 24.8946 5.4583 24.7071C5.2649 24.5196 5.15625 24.2652 5.15625 24V6C5.15625 5.73478 5.2649 5.48043 5.4583 5.29289C5.65169 5.10536 5.914 5 6.1875 5H26.8125C27.086 5 27.3483 5.10536 27.5417 5.29289C27.7351 5.48043 27.8438 5.73478 27.8438 6V19.5375C27.8417 19.6832 27.8072 19.8267 27.7427 19.9583C27.6782 20.0899 27.5851 20.2065 27.4699 20.3L21.9398 24.7625C21.7572 24.9156 21.5239 24.9999 21.2824 25V25Z" stroke="#9A35FF" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                                 <path d="M21.6562 11V17" stroke="#9A35FF" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -178,7 +180,7 @@
                     </li>
 
                     <li>
-                        <a target="_blank" href="https://www.instagram.com/_andrago" alt="Instagram"></a>
+                        <a target="_blank" href="https://www.instagram.com/_andrago">
                             <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M16 21C18.7614 21 21 18.7614 21 16C21 13.2386 18.7614 11 16 11C13.2386 11 11 13.2386 11 16C11 18.7614 13.2386 21 16 21Z" stroke="#FA41FE" stroke-width="2" stroke-miterlimit="10"/>
                                 <path d="M21.5 4.5H10.5C7.18629 4.5 4.5 7.18629 4.5 10.5V21.5C4.5 24.8137 7.18629 27.5 10.5 27.5H21.5C24.8137 27.5 27.5 24.8137 27.5 21.5V10.5C27.5 7.18629 24.8137 4.5 21.5 4.5Z" stroke="#FA41FE" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -188,7 +190,7 @@
                     </li>
 
                     <li>
-                        <a target="_blank" href="https://www.twitch.tv/deandrago" alt="Linkedin"></a>
+                        <a target="_blank" href="https://www.linkedin.com/in/diego-andrade-6a2ab464/">
                         <svg xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 100 100" width="32px" height="32px"><polygon fill="#4b4dff" points="79,78 18.126,78 18.126,19 78.622,19"/>
                             <path fill="#4343bf" d="M82,81H15V16h67.052L82,81z M21,75h54.051l0.897-53H21V75z"/><polygon fill="#3abcf8" points="85,85 21,85 21,75 75,75 75,22 85,22"/>
                             <path fill="#edf7f5" d="M30,40.5h7.5V66H30V40.5z M33.728,37.5h-0.042C31.448,37.5,30,35.832,30,33.749 C30,31.62,31.493,30,33.771,30c2.282,0,3.687,1.62,3.729,3.749C37.5,35.831,36.053,37.5,33.728,37.5z M66,66h-7.5V52.352 c0-3.297-1.838-5.547-4.788-5.547c-2.251,0-3.47,1.518-4.061,2.985c-0.216,0.525-0.152,1.977-0.152,2.71V66H42V40.5h7.5v3.924 c1.082-1.674,2.775-3.924,7.107-3.924c5.367,0,9.392,3.375,9.392,10.911L66,66L66,66z"/>
@@ -196,7 +198,7 @@
                     </li>
 
                     <li>
-                        <a target="_blank" href="https://github.com/DeAndrago" alt="Github Profile"></a>
+                        <a target="_blank" href="https://github.com/DeAndrago">
                         <svg xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 48 48" width="32px" height="32px"><path fill="#fff" d="M41,24c0,9.4-7.6,17-17,17S7,33.4,7,24S14.6,7,24,7S41,14.6,41,24z"/>
                             <path fill="#455a64" d="M21 41v-5.5c0-.3.2-.5.5-.5s.5.2.5.5V41h2v-6.5c0-.3.2-.5.5-.5s.5.2.5.5V41h2v-5.5c0-.3.2-.5.5-.5s.5.2.5.5V41h1.8c.2-.3.2-.6.2-1.1V36c0-2.2-1.9-5.2-4.3-5.2h-2.5c-2.3 0-4.3 3.1-4.3 5.2v3.9c0 .4.1.8.2 1.1L21 41 21 41zM40.1 26.4C40.1 26.4 40.1 26.4 40.1 26.4c0 0-1.3-.4-2.4-.4 0 0-.1 0-.1 0-1.1 0-2.9.3-2.9.3-.1 0-.1 0-.1-.1 0-.1 0-.1.1-.1.1 0 2-.3 3.1-.3 1.1 0 2.4.4 2.5.4.1 0 .1.1.1.2C40.2 26.3 40.2 26.4 40.1 26.4zM39.8 27.2C39.8 27.2 39.8 27.2 39.8 27.2c0 0-1.4-.4-2.6-.4-.9 0-3 .2-3.1.2-.1 0-.1 0-.1-.1 0-.1 0-.1.1-.1.1 0 2.2-.2 3.1-.2 1.3 0 2.6.4 2.6.4.1 0 .1.1.1.2C39.9 27.1 39.9 27.2 39.8 27.2zM7.8 26.4c-.1 0-.1 0-.1-.1 0-.1 0-.1.1-.2.8-.2 2.4-.5 3.3-.5.8 0 3.5.2 3.6.2.1 0 .1.1.1.1 0 .1-.1.1-.1.1 0 0-2.7-.2-3.5-.2C10.1 26 8.6 26.2 7.8 26.4 7.8 26.4 7.8 26.4 7.8 26.4zM8.2 27.9c0 0-.1 0-.1-.1 0-.1 0-.1 0-.2.1 0 1.4-.8 2.9-1 1.3-.2 4 .1 4.2.1.1 0 .1.1.1.1 0 .1-.1.1-.1.1 0 0 0 0 0 0 0 0-2.8-.3-4.1-.1C9.6 27.1 8.2 27.9 8.2 27.9 8.2 27.9 8.2 27.9 8.2 27.9z"/>
                             <path fill="#455a64" d="M14.2,23.5c0-4.4,4.6-8.5,10.3-8.5c5.7,0,10.3,4,10.3,8.5S31.5,31,24.5,31S14.2,27.9,14.2,23.5z"/><path fill="#455a64" d="M28.6 16.3c0 0 1.7-2.3 4.8-2.3 1.2 1.2.4 4.8 0 5.8L28.6 16.3zM20.4 16.3c0 0-1.7-2.3-4.8-2.3-1.2 1.2-.4 4.8 0 5.8L20.4 16.3zM20.1 35.9c0 0-2.3 0-2.8 0-1.2 0-2.3-.5-2.8-1.5-.6-1.1-1.1-2.3-2.6-3.3-.3-.2-.1-.4.4-.4.5.1 1.4.2 2.1 1.1.7.9 1.5 2 2.8 2 1.3 0 2.7 0 3.5-.9L20.1 35.9z"/><path fill="#00bcd4" d="M24,4C13,4,4,13,4,24s9,20,20,20s20-9,20-20S35,4,24,4z M24,40c-8.8,0-16-7.2-16-16S15.2,8,24,8 s16,7.2,16,16S32.8,40,24,40z"/>
@@ -206,8 +208,6 @@
                 </ul>
             </div>
         </section>
-    </main>
-    <footer>
-    </footer>    
+    </main> 
 </body>
 </html>
